
	* ipmimonitoring/: Support entity presence, management subsystem,
	battery, and fru state sensor interpretations.  General code
	cleanup.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Add ipmimonitoring note.

	* ipmi-sel/ipmi-sel.8.pre.in: Add some text on SEL records.

	* README: Update as generic info, not just a GPL notice.

	* doc/freeipmi.7.in: New generic overview manpage.

	* doc/Makefile.am, freeipmi.spec.in, configure.ac: Update for new
	manpage.

	* common/doc: Fix make dist bug.

	* Add freeipmi(7) to "SEE ALSO" on all appropriate manpages.

	* Various manpage and doc fixes.
	
2008-04-05  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Finish -B support.

	* ipmipower/: Add -F support.

	* doc/freeipmi-hostranged.txt: Update appropriately.

	* ipmi-sensors-config/: Put undefined threshold support in verbose
	output only.

	* ipmi-sensors-config/: Fix readable sensors corner case.
	
2008-04-04  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support -B option for consistency to other tools,
	although -B does nothing.  Change original -B option to -G.

	* common/doc/manpage-common-hostranged-text-options.man: Move
	option text into manpage-common-hostranged-text-main.man.

	* common/doc/manpage-common-hostranged-text-options.man: Rename to
	manpage-common-hostranged-text-localhost.man and only mention
	localhost information.

	* Update manpages appropriately.
	
2008-04-04  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/ipmi-sensors-config.8.pre.in: Add notes
	about ipmi-sensors and ipmimonitoring.

	* bmc-config/: Fix some comments.

	* common/doc/manpage-common-known-issues.man: New file.

	* common/doc/Makefile.am: Update for new file.

	* Update numerous webpages with new known-issues info.
	
	* configure.ac: Prepare for beta release.

	* Tagged Release-0_6_0_beta0.

2008-04-03  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-very-verbose-display.c
	(_output_very_verbose_header),
	ipmi-sensors/src/ipmi-sensors-verbose-display.c