@@ -1,4 +1,4 @@
-.TH FREEIPMI 7 "@ISODATE" "FreeIPMI @PACKAGE_VERSION@" "System Commands"
+.TH FREEIPMI 7 "@ISODATE" "FreeIPMI @PACKAGE_VERSION@" "Overview"
 .SH NAME
 FreeIPMI - FreeIPMI overview
 .SH Introduction
